# westeros

./: _build.sh  _run.sh  configure.ac  westeros-compositor.cpp
drm/: Makefile.am  configure.ac
drm/westeros-gl/: westeros-gl.c
essos/: Makefile.am  configure.ac  essos.cpp  essos.pc.in
simpleshell/: _build.sh  westeros-simpleshell.h
